--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ctx": "Server=(localdb)\\mssqllocaldb;Database=Teste;Trusted_Connection=True;"
+    "ctx": "server=localhost\\SQLEXPRESS02;database=Teste;trusted_connection=true;Encrypt=False"
   }
 }
+//Server=(localdb)\\mssqllocaldb;Database=Teste;Trusted_Connection=True;
